Freedom Sanbox Ant Deploy/src/objects/Entity_Global_Assumption__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entity Global Assumptions</relationshipLabel>
        <relationshipName>ntity_Global_Assumptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CashFlow_Projection_End_Year__c</fullName>
        <label>CashFlow Projection End Year</label>
        <picklist>
            <picklistValues>
                <fullName>Retirement Year</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Life Expectency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Analysis_Control__c</fullName>
        <label>Data Collection Analysis Control</label>
        <picklist>
            <picklistValues>
                <fullName>Portfolio Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Assumptions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Default_Estimated_Life_Expectancy__c</fullName>
        <label>Default Estimated Life Expectancy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Retirement_Age__c</fullName>
        <description>This field is created by the Eternus . If the field Retirement Age form the account is null then fetch this field.</description>
        <label>Default Retirement Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Return_on_Investment__c</fullName>
        <label>Expected Return on Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Planing_Output_Report__c</fullName>
        <label>Financial Planing Output Report</label>
        <picklist>
            <picklistValues>
                <fullName>Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disclosure Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goal Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Goal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summary Action Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annexure 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Acknowledgement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goals_Allowed_List__c</fullName>
        <label>Goals Allowed List</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marriage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parental Responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money to Heirs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gold_Growth_Rate__c</fullName>
        <defaultValue>8</defaultValue>
        <description>Added to decide growth rate of new record type GOLD in Investment Asset.</description>
        <label>Gold Growth Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Growth_Rate__c</fullName>
        <label>Income Growth Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inflation_Rate__c</fullName>
        <label>Inflation Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Goals__c</fullName>
        <label>No of Goals</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Months__c</fullName>
        <label>Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal_Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Growth_Rate__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Stock Growth Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Entity Global Assumption</label>
    <nameField>
        <label>Entity Global Assumption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Global Assumptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>